fixed the spacing on the rest of the pages

--- a/stylesheets/blog.css
+++ b/stylesheets/blog.css
@@ -2,7 +2,7 @@ body {
     overflow: hidden;
 }
 
-.contact-container {
+.blog-container {
     display: flex;
     flex-direction: column;
     align-items: center;
