--- a/stylesheets/work.css
+++ b/stylesheets/work.css
@@ -2,7 +2,7 @@ body {
     overflow: hidden;
 }
 
-.contact-container {
+.work-container {
     display: flex;
     flex-direction: column;
     align-items: center;
